test/failing/missing_paren_if_elif.yadl
// RUN: DEFAULT

print(1 + 1)

if (true ) {
 print(1 + 1)

print(1 + 1)
} else {
print(1 + 1)

